<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gpsactive"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/status"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_long_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/longitude"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_lat_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/latitude"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_alt_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/altitude"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_accuracy_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/accuracy"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_speed_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/speed"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_time_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/time"
			android:text="@string/gps_pending" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/gps_provider_lbl"
			android:layout_width="wrap_content" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/provider"
			android:text="@string/gps_pending" />
	</LinearLayout>
</LinearLayout>
